--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.3",
+    "jotai": "^2.12.1",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
     "prisma": "^6.3.1",
     "react": "^19.0.0",
