--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@sanity/client": "^7.12.0",
     "@sanity/image-url": "^1.2.0",
+    "@supabase/supabase-js": "^2.75.0",
+    "@tanstack/react-query": "^5.90.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.4.3",
     "jotai": "^2.12.1",
     "lucide-react": "^0.475.0",
@@ -29,6 +32,7 @@
     "prisma": "^6.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
   },
