--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next": "15.1.11",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
+    "openai": "^6.22.0",
     "prisma": "^6.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
